# tmux-remote-control

./: .gitignore  README.md  SETUP.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  TESTING.md
.planning/debug/: terminal-scroll.md
.planning/phases/01-quick-wins/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-protocol-network-hardening/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-tls-android-security/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  deferred-items.md
android/.planning/codebase/: ARCHITECTURE.md  STRUCTURE.md
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
backend/: .gitignore  Cargo.toml  config.toml.example
backend/migrations/: 001_initial.sql
backend/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  protocol.rs  rate_limit.rs  state.rs  tmux.rs
backend/src/routes/: commands.rs  mod.rs  sessions.rs  terminal.rs
backend/tests/: auth_test.rs  commands_test.rs  cors_test.rs  health_test.rs  ws_auth_test.rs
backend/tests/common/: mod.rs
docs/superpowers/plans/: 2026-03-29-android-app.md  2026-03-29-backend-rust.md
docs/superpowers/specs/: 2026-03-29-remote-terminal-control-design.md
(+36 files in other folders)
